--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@react-spring/web": "^10.0.3",
+    "framer-motion": "^12.23.24",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.67.0",
+    "react-use-gesture": "^9.1.3",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
   },
